immplementacion v6
